# animagic

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: feature-matrix.md  metadata-schema.md  profiles.md  ux-flows.md
src/: main.cpp
src/app/: Application.cpp  Application.h  Application.hpp  Theme.cpp  Theme.h  Theme.hpp
src/config/: AppSettings.cpp  AppSettings.h  AppSettings.hpp  Defaults.cpp  Defaults.h  Defaults.hpp
src/core/: Cancellation.cpp  Cancellation.h  Cancellation.hpp  FrameOps.cpp  FrameOps.h  FrameOps.hpp  MagickBackend.cpp  MagickBackend.h  MagickBackend.hpp  MagickConfigFix.hpp  PreviewEngine.cpp  PreviewEngine.h  PreviewEngine.hpp  Profiles.cpp  Profiles.h  Profiles.hpp  ProjectMetadata.cpp  ProjectMetadata.h  ProjectMetadata.hpp  Task.h  Task.hpp  TaskRunner.cpp  TaskRunner.h  TaskRunner.hpp  Timing.cpp  Timing.h  Timing.hpp  Validators.cpp  Validators.h  Validators.hpp
src/platform/: Paths.cpp  Paths.h  Paths.hpp  SpaceCheck.cpp  SpaceCheck.h  SpaceCheck.hpp
src/resources/: resources.qrc
src/ui/AssemblePage/: AssemblePage.cpp  AssemblePage.h  AssemblePage.hpp  AssembleWorker.cpp  AssembleWorker.h  FrameListModel.cpp  FrameListModel.h  FrameListModel.hpp  FrameTimingEditor.cpp  FrameTimingEditor.h  FrameTimingEditor.hpp  PreviewPlayer.cpp  PreviewPlayer.h  PreviewPlayer.hpp  PreviewWidget.cpp  PreviewWidget.h  PreviewWidget.hpp
src/ui/Common/: CenteredListView.cpp  CenteredListView.h  CenteredListView.hpp  FilePickers.cpp  FilePickers.h  FilePickers.hpp  ProgressLogPane.cpp  ProgressLogPane.h  ProgressLogPane.hpp  TaskBar.cpp  TaskBar.h  TaskBar.hpp
src/ui/DisassemblePage/: DisassemblePage.cpp  DisassemblePage.h  DisassemblePage.hpp  DisassembleViewModel.cpp  DisassembleViewModel.h  DisassembleViewModel.hpp  DisassembleWorker.cpp  DisassembleWorker.h
src/ui/Main/: MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/ui/MetadataPage/: MetadataPage.cpp  MetadataPage.h  MetadataPage.hpp
src/ui/ProjectBrowser/: Filters.cpp  Filters.h  Filters.hpp  ProjectBrowser.cpp  ProjectBrowser.h  ProjectBrowser.hpp
src/ui/SettingsPage/: SettingsPage.cpp  SettingsPage.h  SettingsPage.hpp
